# log_super

./: .coverage  .gitignore  README.md  pyproject.toml
.zed/: settings.json
migrations/: env.py
migrations/versions/: 218e82309016_add_default_to_updated_at.py  728731e1778f_fix_users_table_with_new_field.py  77181b932966_update_users_table_with_new_field.py  a8b4fa0f32f3_create_users_table.py
src/: app.py  database.py  models.py  schemas.py  settings.py
src/log_super/: app.py  database.py  models.py  schemas.py  security.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
