[project]
name = "log-super"
version = "0.1.0"
description = ""
authors = [{ name = "Márcio", email = "marcionitao@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard] (>=0.128.0,<0.129.0)"]

[tool.poetry]
packages = [{ include = "log_super", from = "src" }]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]
target-version = "py313"

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "PT", "B", "ASYNC", "W", "PL"]
ignore = ["E501"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
run = "poetry run fastapi dev src/app.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
]
